# claspfmt

./: .clangd  .gitignore  CMakeLists.txt  claspfmt
archive/: CMakeLists.txt
archive/_src/: prepare.cpp  prepare.h  uuid.h  writer.h
libs/mikandr/: CMakeLists.txt  mikandr.h
libs/mikandr/lib/: libmikandr.0.1.0.dylib  libmikandr.0.dylib  libmikandr.dylib
libs/mikandr/src/: mikandr.cpp  tree.cpp  tree.h  treenode.h
src/: CMakeLists.txt  ast.cpp  ast.h  format.cpp  format.h  helpers.cpp  helpers.h  main.cpp  mikandr.cpp  mikandr.h  mylib.cpp  mylib.h  prepare.cpp  prepare.h  tokenizer.cpp  tokenizer.h  types.h  uuid.cpp  writer.cpp
